--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
